0.10.0 (currently working on)
- [#4320] Cleanup: Add @var type hinting to help static analysis
- [#5206] Cleanup: Drop the unset from tearDown()
- [#5198] Cleanup: Make setUp and tearDown protected
- [#4319} Fix: Change != to <> in SQL
- [#5203] Cleanup: Shorten the boolean casts
- [#5201] Cleanup: Convert intval/float to casts
- [#5200] Cleanup: boolean -> bool, integer -> int
- [#5088] Cleanup: Shorten the die() line
- [#4943] Cleanup: Add missing @throws annotations
- [#5199] Cleanup: Use $GLOBALS['TCA'] instead of $TCA
- [#5197] Cleanup: Use comments instead of PHPDoc style comments in copyright block
- [#5178] Fix: Use time() instead of mktime()
- [#5176] Change: Update maximum PHP version to 5.6
- [#5163] Fix: Make the insert record shortcut TS compatible with 6.2
- [#5174] Fix: Avoid feInterface deprecation warnings in 6.2
- [#5085] Fix: Allow first_name and last_name in the registration form
- [#5086] Fix: Old reference to locallang.php in flexform configuration
- [#5098] Feature: Switch seminars to SwiftMailer
- [#4114] Fix: Use the Core form tokens in the BE modules
- [#5072] Change: Switch the BE module to the module dispatcher
- [#5071] Fix: Drop any reference to static_info_tables_taxes
- [#4836] Fix: Add compatibility with static_info_tables 2.3.x-6.0.x
- [#5070] Fix: Test failure if sr_feuser_register is not installed
- [#5062] Fix: Test crash in tx_seminars_OldModel_EventTest in 6.2
- [#5061] Fix: Test error in tx_seminars_FrontEnd_DefaultControllerTest in 6.2
- [#4649] Fix: Also recognize first/last name for current TYPO3 versions
- [#5024] Fix: Test errors in tx_seminars_OldModel_RegistrationTest in TYPO3 CMS 6.1
- [#5023] Fix: Test failures in tx_seminars_FrontEnd_EventEditorTest in TYPO3 CMS 6.1
- [#5026] Fix: Deprecation messages about the flash message API in TYPO3 CMS 6.1
- [#5022] Fix: Test errors in tx_seminars_FrontEnd_RequirementsListTest with TYPO3 CMS 6.1