@@ -252,11 +252,11 @@
 						</fieldset>
 					</li>
 				</ul>
-				<script type="text/javascript">/*<![CDATA[*/
+				<script type="text/javascript">
 					fixNameFieldsNumber();
 					restoreSeparateNameFields();
 					compileNames();
-				/*]]>*/</script>
+				</script>
 			</div>
 		</dd>
 <!-- ###REGISTRATION_WRAPPER_ATTENDEES_NAMES### -->
